# recsys_challenge_2017

./: .gitignore  CB_SVD.py  NMF.py  README.md  Untitled.ipynb  XSquared.py  cbf.py  content-based-v2.py  content-based.py  content_based_filtering.py  evaluator.py  item_based_filtering.py  loader.py  loader_v2.py  plotter.py  requirements.txt  results.rtf  submission.csv  submission_switch_ensemble.csv  test.py  test_CB_SVD.py  test_NMF.py  test_cbf.py  test_content_based.py  test_evaluator.py  test_item_based_filtering.py  test_user_based.py  test_user_item_based_comb.py  test_xsq.py  user_based.py
logs/: Item Based output  Item Based output.txt  map.txt
notebooks/: CBF Optimization.ipynb  EnsembleSimilarity.ipynb  EnsembleSimilarity_leonardo.ipynb  ensemble_merged_ranked_lists.ipynb
params/: ensemble_params.rtf
src/cpp/: CMakeLists.txt  README.md  main.cpp
src/cpp/cython/: BPyRSlim.pyx
src/cpp/include/: BPRSlim.h  Utils.h
src/cpp/src/: BPRSlim.cpp
submissions/: m_at_5.txt  results.rtf  submission_20171008.csv  submission_20171010_ubf_sh-60_kf-50.csv  submission_cbf 2017114.csv  submission_cbf.csv  submission_cbf_20171012.csv  submission_cbf_20171020.csv  submission_cbf_20171025.csv  submission_cbf_20171025_2.csv  submission_cbf_20171104_2.csv  submission_cslim_20171023.csv  submission_cslim_boh.csv  submission_ensemble.csv  submission_ensemble_cluster.csv  submission_ibf.csv  submission_ibf_20171011.csv  submission_switch_ensemble.csv  submission_ubf_20171009.csv  submission_user_based_filtering.csv  submission_user_item_combination_20171011.csv
(+111 files in other folders)
